--- a/app/views/interested-party/v2/appeal-search-reference.html
+++ b/app/views/interested-party/v2/appeal-search-reference.html
@@ -54,7 +54,7 @@
         <!-- link to go to address lookup -->
         <p class="govuk-body">
           Or <a href="appeal-search-address?version=">
-            search for an appeal using the site address
+            search for an appeal using the appeal site postcode
           </a>
         </p>
 
