--- a/app/views/interested-party/v2/check-answers.html
+++ b/app/views/interested-party/v2/check-answers.html
@@ -67,7 +67,7 @@
             </a>
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
+        <div class="govuk-summary-list__row pins-summary-list__row--last">
           <dt class="govuk-summary-list__key">
             Comment
           </dt>
