--- a/app/assets/sass/pins/tables.scss
+++ b/app/assets/sass/pins/tables.scss
@@ -1,3 +1,7 @@
-.govuk-summary-list__row--last {
+.pins-summary-list__row--last {
+	border-bottom: none;
+}
+
+.pins-govuk-table__row--last td {
 	border-bottom: none;
 }
