'appealCode' on the Comment received screen

--- a/app/views/interested-party/v2/comment-received.html
+++ b/app/views/interested-party/v2/comment-received.html
@@ -33,8 +33,9 @@
         <h1 class="govuk-panel__title">
           {{ title }}
         </h1>
+
         <div class="govuk-panel__body">
-          Your comment will be included in appeal number <strong>1234567</strong>.
+          Your comment will be included in appeal number <strong>APP/Q999/D/21/{{data['appealCode']}}</strong>.
         </div>
       </div>
 
