Updates to search results for interested parties

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -263,8 +263,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v2/appeal-search-no-results" class="govuk-link--no-visited-state">
-                      No results
+                    <a href="/interested-party/v2/appeal-search-no-results?search=number" class="govuk-link--no-visited-state">
+                      No results from appeal number
                     </a>
                   </li>
                   <li>
@@ -274,8 +274,8 @@
                   </li>
 
                   <li>
-                    <a href="/interested-party/v2/appeal-select-appeal">
-                      Select the site address
+                    <a href="/interested-party/v2/appeal-select-appeal?version=linked-address">
+                      Select the appeal
                     </a>
                   </li>
                   <li>
