--- a/app/views/interested-party/v2/appeal-details.html
+++ b/app/views/interested-party/v2/appeal-details.html
@@ -103,6 +103,14 @@
         </div>
         -->
 
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-summary-list__key--no-border govuk-!-width-one-third">
+            Description of development
+          </dt>
+          <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
+            Loft conversion of roof to existing dwelling (Certificate of Lawfulness of Proposed Use).
+          </dd>
+        </div>
       </dl>
 
       {% if data['status'] == "open" %}
