--- a/app/views/interested-party/v2/appeal-search-no-results.html
+++ b/app/views/interested-party/v2/appeal-search-no-results.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "No appeals matching that number" %}
+{% set title = "No matching appeals" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -34,13 +34,31 @@
       {{ title }}
     </h1>
 
-    <p class="govuk-body-l">
-      We didn’t find any appeals using that appeal reference number.
-    </p>
+    {% if data['search'] == "number" %}
+      <p class="govuk-body">
+        No appeals found using that appeal reference.
+      </p>
+    {% else %}
+      <p class="govuk-body">
+        {% if data['postcode'] %}
+          No appeals found for {{ data['postcode'] }}. <a href="appeal-search-address?version=" class="govuk-link">Change<span class="govuk-visually-hidden"> search address</span></a>
+        {% else %}
+          No appeals found for BS3 3EX.
+        {% endif %}
+      </p>
+    {% endif %}
 
-    <p class="govuk-body">
-      Go back and <a href="appeal-search-reference" class="govuk-link govuk-link--no-visited-state">search for another appeal</a>.
-    </p>
+    {% if data['search'] == "number" %}
+      {{ govukButton({
+        href: "appeal-search-reference",
+        text: "Search for another appeal"
+      }) }}
+    {% else %}
+      {{ govukButton({
+        href: "appeal-search-address",
+        text: "Search for another appeal"
+      }) }}
+    {% endif %}
 
   </div>
 </div>
