Appeal number > appeal reference

--- a/app/views/interested-party/v2/appeal-search-address.html
+++ b/app/views/interested-party/v2/appeal-search-address.html
@@ -69,7 +69,7 @@
 
         <p class="govuk-body">
           Or <a href="appeal-search-reference?version=">
-            search for an appeal using the appeal number
+            search for an appeal using the appeal reference
           </a>
         </p>
 
