--- a/app/views/interested-party/v2/comment-received.html
+++ b/app/views/interested-party/v2/comment-received.html
@@ -35,7 +35,7 @@
         </h1>
 
         <div class="govuk-panel__body">
-          Your comment will be included in appeal number <strong>APP/Q999/D/21/{{data['appealCode']}}</strong>.
+          Your comment will be included in appeal reference <strong>APP/Q999/D/21/{{data['appealCode']}}</strong>.
         </div>
       </div>
 
