--- a/app/views/interested-party/v2/appeal-details.html
+++ b/app/views/interested-party/v2/appeal-details.html
@@ -13,7 +13,7 @@
 {% if data['appealCode'] %}
   {% set title = "Appeal APP/Q999/D/21/"+data['appealCode'] %}
 {% else %}
-  {% set title = "Appeal number APP/Q999/D/21/0172631" %}
+  {% set title = "Appeal APP/Q999/D/21/0172631" %}
 {% endif %}
 
 {% block pageTitle %}
