--- a/app/views/appellant-submission/v13/full/claiming-costs/index.html
+++ b/app/views/appellant-submission/v13/full/claiming-costs/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Upload an application for appeal costs - {{serviceName}} - GOV.UK
+  Upload a document with details of your claim - Submit a claim for costs - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
