--- a/app/views/appellant-submission/v13/full/contact-details/how-to-answer.html
+++ b/app/views/appellant-submission/v13/full/contact-details/how-to-answer.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  How to answer the rest of the questions - Before you start - {{serviceName}} - GOV.UK
+  How to answer the rest of the questions - Provide your contact details - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
