--- a/app/views/appellant-submission/v13/full/procedure-type/common-ground.html
+++ b/app/views/appellant-submission/v13/full/procedure-type/common-ground.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Upload an application for appeal costs - {{serviceName}} - GOV.UK
+  Upload your draft statement of common ground - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
