--- a/app/views/appellant-submission/v13/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v13/before-you-start/planning-department.html
@@ -10,7 +10,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
