--- a/app/views/appellant-submission/v13/full/appeal-site/knows-some/tell-landowners.html
+++ b/app/views/appellant-submission/v13/full/appeal-site/knows-some/tell-landowners.html
@@ -9,7 +9,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
     text: "Back",
