--- a/app/views/appellant-submission/v13/full/appeal-site/site-address.html
+++ b/app/views/appellant-submission/v13/full/appeal-site/site-address.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Sensitive information - Upload documents for your appeal - {{serviceName}} - GOV.UK
+  What is the address of the appeal site? - Upload documents for your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -9,7 +9,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
     text: "Back",
