--- a/app/views/appellant-submission/v13/full/confirmation.html
+++ b/app/views/appellant-submission/v13/full/confirmation.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Confirmation - {{serviceName}} - GOV.UK
+  Appeal submitted - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -9,7 +9,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
