--- a/app/views/appellant-submission/v13/full/planning-application-documents/decision-letter.html
+++ b/app/views/appellant-submission/v13/full/planning-application-documents/decision-letter.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Is your appeal about any of the following? - Before you start - {{serviceName}} - GOV.UK
+  Decision letter - Upload documents from your planning application - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -9,7 +9,7 @@
     tag: {
       text: "Beta"
     },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
     text: "Back",
