--- a/app/views/appellant-submission/v13/full/procedure-type/decide.html
+++ b/app/views/appellant-submission/v13/full/procedure-type/decide.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  How would you like us to decide your appeal? - Tell us how you would like us to decide your appeal - {{serviceName}} - GOV.UK
+  How would you prefer us to decide your appeal? - Tell us how you would like us to decide your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
