--- a/app/views/appellant-submission/v13/full/procedure-type/inquiry/days.html
+++ b/app/views/appellant-submission/v13/full/procedure-type/inquiry/days.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
 {% block pageTitle %}
-  Tell us how you would like us to decide your appeal - {{serviceName}} - GOV.UK
+  How many days would you expect the inquiry to last? - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
